[package]
name = "ha-geo-ip"
version = "0.1.0"
edition = "2021"

[dependencies]
#reqwest = { version = "0.11", features = ["blocking"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
httpdate = "1.0"


#[target.aarch64-unknown-linux-musl]
#linker = "aarch64-linux-musl-gcc"

